force-app/main/default/objects/BREG_Stamp_Setting__c/BREG_Stamp_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BREG Stamp Setting</label>
</CustomObject>