force-app/main/default/objects/BREG_Stamp_Setting__c/fields/breg_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>breg_Date_Format__c</fullName>
    <defaultValue>&quot;MM/dd/yyyy hh:mm tt&quot;</defaultValue>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>