force-app/main/default/objects/BREG_Stamp_Setting__c/fields/breg_Date_Position_Left__c.field-meta.xml
<CustomField>
    <fullName>breg_Date_Position_Left__c</fullName>
    <label>Date Position Left</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>