force-app/main/default/objects/BREG_Stamp_Setting__c/fields/breg_Date_Position_Right__c.field-meta.xml
<CustomField>
    <fullName>breg_Date_Position_Right__c</fullName>
    <label>Date Position Right</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>