force-app/main/default/objects/BREG_Stamp_Setting__c/fields/breg_Includes_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Includes_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Date</label>
    <type>Checkbox</type>
</CustomField>