force-app/main/default/objects/BREG_Stamp_Setting__c/fields/breg_Stamp_Codes__c.field-meta.xml
<CustomField>
    <fullName>breg_Stamp_Codes__c</fullName>
    <description>Comma Separated codes from Stamp custom metadata type</description>
    <inlineHelpText>Comma Separated codes from Stamp custom metadata type. Leave empty if no extra stamps to be available</inlineHelpText>
    <label>Stamp Codes</label>
    <type>TextArea</type>
</CustomField>