force-app/main/default/objects/BREG_Stamp_Setting__c/fields/breg_Stamp_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Stamp_Name__c</fullName>
    <description>Stamp file name from the static resource</description>
    <label>Stamp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>